@@ -219,12 +219,8 @@ regular charset detection.
 </tr>
 
 <tr>
-<td>`nextBuffer()`, `prevBuffer()`, `nextSiblingBuffer()`,
-`prevSiblingBuffer()`, `parentBuffer()`</td>
-<td>Same as `traverse("next")`, `traverse("prev")`,
-`traverse("next-sibling")`, `traverse("prev-sibling")`, and
-`traverse("parent")`.
-</td>
+<td>`nextBuffer()`, `prevBuffer()`</td>
+<td>Same as `traverse("next")` and `traverse("prev")`.</td>
 </tr>
 
 <tr>
@@ -430,9 +426,8 @@ below.</td>
 
 <tr>
 <td>`navDirection`</td>
-<td>The direction the user last moved in the buffer list using
-`traverse`.  Possible values are `prev`, `next`, `prev-sibling`,
-`next-sibling`, `parent`, `any`.</td>
+<td>The direction the user last moved in the buffer list using `traverse`.
+Possible values are `prev`, `next`, `any`.</td>
 </tr>
 
 <tr>
@@ -455,8 +450,7 @@ Also, the following static function is defined on `Pager` itself:
 <td>`Pager.oppositeDir(dir)`</td>
 <td>Return a string representing the direction opposite to `dir`.
 <p>
-For "next", this is "prev"; for "parent", "next"; for "prev-sibling",
-"next-sibling"; for "any", it is the same; for the rest, vice versa.</td>
+For "next", this is "prev"; for "prev", "next"; for "any", it's the same.</td>
 </tr>
 
 </table>
@@ -745,15 +739,11 @@ position if it is outside the screen.</td>
 <td>`find(dir)`</td>
 <td>Find the next buffer in the list in a specific direction.
 <p>
-Possible values of `dir` are: `prev`, `next`, `prev-sibling`,
-`next-sibling`, `parent`, `any`.
+Possible values of `dir` are: "prev", "next", and "any".
 <p>
 "next" and "prev" return the next/previous buffer respectively.
 <p>
-"prev-sibling", "parent" are deprecated aliases for "prev", while
-"next-sibling" is a deprecated alias for "next".
-<p>
-Finally, "any" returns either "prev", or if it's null, "next".
+"any" returns either "prev", or if it's null, "next".
 </td>
 </tr>
 
